--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
         header {
             background-color: rgb(26, 191, 26);
-            padding: 20px
+            
         }
 
         a {
@@ -142,7 +142,7 @@
 </head>
 
 <body class="container-fluid bg-dark" >
-    <header>
+    <header class="container-fluid">
         <div class="name">
             <h1 style="color:rgb(1, 73, 1)">Jai</h1>
             <img
@@ -283,7 +283,7 @@
                 <h4>Precise lrregation</h4>
                 <p class="card-text"> jai krishi ensures crops are precisely irrigated automatically without any human
                   intervention and reduces water.</p>
-                <a href="#" class="btn btn-secondary">know more</a>
+                <a href="solution.html" class="btn btn-secondary">know more</a>
               </div>
             </div>
           </div>
