--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
               <img src="https://www.apacoutlookmag.com/media/Agriculture-Sensor-Technology-Ritam-Gandhi.png"
                 class="card-img-top" alt="...">
               <div class="card-body">
-                <h4>Precise lrregation</h4>
+                <h4>Agree techno</h4>
                 <p class="card-text"> The rise of sustainable technology presents innovators with a unique opportunity to
                   initiate substantial changes within the agricultural sector. Ritam Gandhi, Director and founder of Studio
                   Graphene gives us the full story .</p>
-                <a href="#" class="btn btn-secondary">know more</a>
+                <a href="solution.html" class="btn btn-secondary">know more</a>
               </div>
             </div>
           </div>
@@ -332,7 +332,7 @@
                     lower
                     prices, discover modern nutrients to improve crop productivity and effective ways to remediate pest,
                     disease and nutrition deficiency.</p>
-                  <a href="#" class="btn btn-secondary">know more</a>
+                  <a href="solution.html" class="btn btn-secondary">know more</a>
                 </div>
               </div>
             </div>
@@ -347,7 +347,7 @@
                     manual
                     intervention. Ensures crops receive the precise irrigation and fertigation, thereby increasing their
                     productivity and resistance to pest and diseases.</p>
-                  <a href="#" class="btn btn-secondary">know more</a>
+                  <a href="solution.html" class="btn btn-secondary">know more</a>
                 </div>
               </div>
             </div>
@@ -365,7 +365,7 @@
                       nutrition
                       and disease
                       management, yield get a significant boost by upto 50% and in some cases by upto 200%.</p>
-                    <a href="#" class="btn btn-secondary">know more</a>
+                    <a href="solution.html" class="btn btn-secondary">know more</a>
                   </div>
                 </div>
               </div>
@@ -378,7 +378,7 @@
                       temperature and
                       humidity in a protected structures like net house or poly house is maintained at ideal levels to
                       ensure crop productivity and disease control.</p>
-                    <a href="#" class="btn btn-secondary">know more</a>
+                    <a href="solution.html" class="btn btn-secondary">know more</a>
                   </div>
                 </div>
               </div>
